# mae148_team1_2026

./: !.gitignore  .gitignore  README.md  pyproject.toml
opponent_ekf/: README.md  main_ekf.py  opp_ekf.py  opp_kf.py  test_opp_ekf.py  yolo_oakd_tracking_ekf.py
yolo-detection/: opp_ekf.py  yolo_oakd_tracking.py  yolo_training.ipynb
yolo_detection/: README.md  data.yaml  yolo_oakd_detection.py  yolo_oakd_tracking.py  yolo_training.ipynb  yolo_video_detect.py
yolo_labeler/: README.md  label_gui.py  process_submissions.sh
