[project]
name = "mae148-labeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pyside6>=6.10.2",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.14",
]
